--- a/config/entities/sensors/version_available.yaml
+++ b/config/entities/sensors/version_available.yaml
@@ -2,9 +2,9 @@
 # The version sensor platform is displaying the
 # available version online.
 #
-# https://www.home-assistant.io/integrations/sensor.version/
+# https://www.home-assistant.io/integrations/version/
 #
 platform: version
 name: version_available
 source: hassio
-image: qemux86-64
+image: raspberrypi3
