--- a/config/integrations/homeassistant.yaml
+++ b/config/integrations/homeassistant.yaml
@@ -5,7 +5,9 @@
 # main configuration.yaml.
 #
 homeassistant:
-
+  # Home location
+  latitude: !secret latitude
+  longitude: !secret longitude
   # Lets me customize individual entities
   customize: !include_dir_merge_named ../customizations/entities
 
