--- a/config/integrations/lovelace.yaml
+++ b/config/integrations/lovelace.yaml
@@ -7,4 +7,5 @@
 # https://www.home-assistant.io/lovelace/
 # https://www.home-assistant.io/lovelace/yaml-mode/
 #
-lovelace: ~
+lovelace:
+  mode: yaml 
