add zigbee2mqtt integration

--- a/config/lovelace/views/dashboard.yaml
+++ b/config/lovelace/views/dashboard.yaml
@@ -2,4 +2,11 @@
 path: dashboard
 title: Dashboard
 icon: mdi:home-assistant
-cards: []
+cards: 
+  - type: entities
+    entities:
+      - entity: input_boolean.zigbee_permit_join
+      - entity: timer.zigbee_permit_join
+      - entity: sensor.bridge_state
+    show_header_toggle: false
+    title: Zigbee
