--- a/config/integrations/input_boolean.yaml
+++ b/config/integrations/input_boolean.yaml
@@ -9,4 +9,8 @@
 # I don't store my input boolean entities in my YAML configuration,
 # instead I manage them via the Home Assistant frontend.
 #
-input_boolean: ~
+input_boolean:
+  zigbee_permit_join:
+      name: Allow devices to join
+      initial: off
+      icon: mdi:cellphone-wireless
