--- a/config/integrations/google_assistant.yaml
+++ b/config/integrations/google_assistant.yaml
@@ -1,5 +1,5 @@
 google_assistant:
   project_id: !secret google_project_id
-  service_account: !secret google_serviceaccount
+  service_account: !include ../google_serviceaccount.json
   report_state: true
   expose_by_default: true
