--- a/config/integrations/script.yaml
+++ b/config/integrations/script.yaml
@@ -8,4 +8,4 @@
 #
 # CURRENTLY DISABLED: No scripts yet.
 #
-# script: !include_dir_merge_named ../../scripts
+script: !include_dir_merge_named ../scripts
